# AI-it-is-depends-on-you

./: .gitignore  README.md  setup_gemini.sh
00_hello_world/: trump_art.py
01_teams_bot/: .env  .gitignore  requirements.txt
01_teams_bot/doc/: 00_基础设计.md  函数设计.md  详细设计.md
01_teams_bot/src/: .env  app.py  install.sh  manifest.json  packet.sh  requirements.txt  startstop.sh  templates_manifest.json
01_teams_bot/unit_test/: run_tests.sh  test_ai_bot.py  test_ai_service.py  test_app.py
02_douyu_AI_danmu/doc/: development_guide.md  how_to_use.md
02_douyu_AI_danmu/extensions/: ai_service.js  config.js  content.js  file_manager.js  manifest.json  options.html  options.js  popup.html  popup.js
03_web_system_1/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
04_MPC_token_usage/: Dockerfile  MODEL_INSTRUCTIONS.md  README.md  mcp_server.py  run_docker.sh  run_test_docker.sh
04_MPC_token_usage/node-server/: Dockerfile  README.md  package.json
04_MPC_token_usage/test/: test_mcp_server.py
05_Air_traffic_control/: .gitignore  longTimeMemory.txt
05_Air_traffic_control/RadioPlugin/: CMakeLists.txt
05_Air_traffic_control/RadioPlugin/src/: AudioCapture.cpp  AudioCapture.h  AudioPlayback.cpp  AudioPlayback.h  RadioPlugin.cpp
05_Air_traffic_control/doc/: build_environment_setup.md  design_specification.md  source_documentation.md  test_coverage_methodology.md
05_Air_traffic_control/test/: CMakeLists.txt  TestMain.cpp  XPLMMock.h  run_test_and_check.sh
05_Air_traffic_control/test/XPLM/: XPLMSound.h
06_claude/: claude_demo.py  main.py  pyproject.toml
08_chrome_TTS/: GEMINI.md  background.js  jest.config.js  manifest.json  offscreen.js  package.json  popup.css  popup.html  popup.js
08_chrome_TTS/coverage/: clover.xml  coverage-final.json  lcov.info
08_chrome_TTS/extend/: background.js  manifest.json  offscreen.js  package-lock.json  popup.css  popup.js
08_chrome_TTS/test/: background.test.js  integration.test.js  offscreen.test.js  popup.test.js  setup.js
09_chrome_TTS_2/: background.js  generate_icons.py  manifest.json  popup.css  popup.html  popup.js
09_chrome_TTS_2/doc/: design.txt
10_MCP_gemini_demo/: .gitignore  3gpp-expert.skill
10_MCP_gemini_demo/doc/: desgin.txt
10_MCP_gemini_demo/mcp-disk-space/: CONFIG.md  index.js  package-lock.json  package.json
10_MCP_gemini_demo/mcp-firewall-c/: main.c
10_MCP_gemini_demo/mcp-firewall-cpp/: main.cpp
11_get_douyu_danmu/: .gitignore  douyu_client.py  douyu_ext_cdp.py  douyu_gui.py  douyu_send_danmu.py
7_banpick/: DEPLOYMENT.md  README.md  design.txt  package-lock.json  package.json  prisma.config.ts  vitest.config.ts
7_banpick/test/: setup.ts  (+16 more)
(+26 files in other folders)
